--- a/index.html
+++ b/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Armário</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js"></script>
+    <title>Reserva de Armários</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Reserva de Armário</h2>
-        <label for="tipoArmario">Selecione o tipo de armário:</label>
-        <select id="tipoArmario">
-            <option value="padrao">Padrão</option>
-            <option value="duplo">Duplo</option>
-        </select>
-        <button onclick="reservarArmario()">Reservar</button>
-        <p id="resultado"></p>
-    </div>
+    <!-- Cabeçalho -->
+    <header>
+        <div class="icon">Icon</div>
+        <div class="logo">Logo</div>
+        <div class="icon">Icon</div>
+    </header>
+
+    <!-- Mensagens -->
+    <section class="mensagens">
+        <h1>Olá Raphael</h1>
+        <p>Você possui um armário reservado com entrega para hoje...</p>
+        <p>Você possui uma pendência no financeiro...</p>
+    </section>
+
+    <!-- Conteúdo principal -->
+    <main>
+        <section class="aulas">
+            <article class="disciplina">
+                <h2>Disciplina</h2>
+                <p>Sala e Horário</p>
+                <div class="icones">
+                    <div class="icon">Icon</div>
+                    <div class="icon">Icon</div>
+                    <div class="icon">Icon</div>
+                </div>
+            </article>
+            <article class="disciplina">
+                <h2>Disciplina</h2>
+                <p>Sala e Horário</p>
+                <div class="icones">
+                    <div class="icon">Icon</div>
+                    <div class="icon">Icon</div>
+                    <div class="icon">Icon</div>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <!-- Notícias -->
+    <section class="noticias">
+        <article class="card">
+            <h2>Card de Notícias</h2>
+            <p>Subtítulo</p>
+        </article>
+    </section>
 </body>
 </html>
