--- a/card/index.html
+++ b/card/index.html
@@ -64,8 +64,8 @@
         <div class="carousel">
             <!-- Os cards deverão ser inseridos dinamicamente via JS -->
         </div>
-        <button id="prevBtn" aria-label="Anterior">❮</button>
-        <button id="nextBtn" aria-label="Próximo">❯</button>        
+        <button id="prevBtn" aria-label="Anterior"></button>
+        <button id="nextBtn" aria-label="Próximo"></button>        
     </div>  
 
     <script src="script.js"></script>
