--- a/card/index.html
+++ b/card/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarefa de Cores</title>
+    <title>CARD DE NOTICIAS - TAREFA</title>
     <!-- Importando a fonte do Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome para os ícones -->
